# edgeSeeker

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js  windi.config.js
backend/: .env.example  main.py  pyproject.toml  start.sh
backend/app/api/v1/: __init__.py  hotspot.py  markets.py  news.py  regions.py  semantic.py  social.py  translate.py
backend/app/core/: config.py  proxy.py
backend/app/models/: __init__.py  markets.py  news.py  social.py
backend/app/services/: hotspot_detector.py
backend/app/services/analysis/: __init__.py
backend/app/services/markets/: __init__.py  alpaca_service.py  commodities_service.py  finance.py  polymarket.py  stocks_service.py
backend/app/services/news/: __init__.py  aggregator.py
backend/app/services/semantic/: jina_matcher.py
backend/app/services/social/: __init__.py  bluesky.py  truthsocial.py  twitter.py
backend/app/services/translate/: llm_translator.py  translator.py
backend/app/services/trends/: google_trends.py
frontend/: index.html  package-lock.json  package.json  windi.config.js
frontend/src/: App.jsx  index.css
src/: App.jsx  main.jsx
src/components/: ErrorBoundary.jsx  Footer.jsx  LoadingSpinner.jsx  Navbar.jsx  NewsCard.jsx  NewsCarousel.jsx  NewsSection.jsx  NewsStream.jsx  NewsStream2.jsx
src/pages/: AdminPage.jsx  CategoryPage.jsx  HomePage.jsx  MDXEditorUsage.jsx  NewsDetailPage.jsx  SimplifiedMDXEditor.jsx
src/py_services/: app.py  cnn_parseWeb.py  mock_api.py  mock_data.py  wapo_parseWeb.py  wapotest.py
src/services/: mockApi.js  mockData.js  server.js
(+20 files in other folders)
